examples/test/testpolicy19524.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19524
  namespace: namespace297
spec:
  podSelector:
    matchLabels:
      key38: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value3
          key10: value18
          key23: value10
      podSelector:
        matchLabels:
          key33: value21
